<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/budgetbg"
                android:background="@drawable/background"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="1080px"
                android:layout_height="2400px" />

            <ImageView
                android:id="@+id/studybuddylogo"
                android:src="@drawable/studybuddylogo"
                android:contentDescription="studybuddy_logo"
                android:layout_marginStart="63dp"
                android:layout_marginTop="31dp"
                android:layout_width="234.64dp"
                android:layout_height="210dp" />

            <TextView
                android:id="@+id/budgetquestion"
                android:layout_width="342dp"
                android:layout_height="66dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="240dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/budgetquestion"
                android:textColor="@color/textcolor"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/budgetoptions"
                android:layout_marginTop="320dp"
                android:layout_marginStart="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/optiononerl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/optionone"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="7.5dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:background="@drawable/buttonbg"
                        android:text="@string/optionone"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/optiontworl"
                    android:layout_marginTop="37dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/optiontwo"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/optiontwo"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/optionthreerl"
                    android:layout_marginTop="74dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/optionthree"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/optionthree"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/optionfourrl"
                    android:layout_marginTop="111dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/optionfour"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/optionfour"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/backbuttonrl"
                android:layout_marginTop="574dp"
                android:layout_marginStart="143dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backbutton"
                    android:layout_width="10dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="backbutton"
                    android:src="@drawable/backbutton" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="28dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/textcolor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>