<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/background">

    <ScrollView android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/locationbg"
                android:background="@drawable/background"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="1080px"
                android:layout_height="2400px" />

            <ImageView
                android:id="@+id/studybuddylogo"
                android:src="@drawable/studybuddylogo"
                android:contentDescription="studybuddy_logo"
                android:layout_marginStart="63dp"
                android:layout_marginTop="31dp"
                android:layout_width="234.64dp"
                android:layout_height="210dp" />

            <TextView
                android:id="@+id/locationquestion"
                android:layout_width="282dp"
                android:layout_height="66dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="240dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/locationquestion"
                android:textColor="@color/textcolor"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/locationoptions"
                android:layout_marginTop="320dp"
                android:layout_marginStart="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:id="@+id/caviterl"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/cavite"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/cavite"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ceburl"
                    android:layout_marginTop="37dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/cebu"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/cebu"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/davaorl"
                    android:layout_marginTop="74dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/davao"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/davao"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lagunarl"
                    android:layout_marginTop="111dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/laguna"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/laguna"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/manilarl"
                    android:layout_marginTop="148dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/manila"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/manila"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/makatirl"
                    android:layout_marginTop="185dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/makati"
                        android:layout_width="180dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="7.5dp"
                        android:background="@drawable/buttonbg"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/makati"
                        android:textColor="@color/textcolor"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/back_button"
                android:layout_marginTop="574dp"
                android:layout_marginStart="143dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/backbutton"
                    android:layout_width="10dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="backbutton"
                    android:src="@drawable/backbutton" />

                <TextView
                    android:id="@+id/back"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/textcolor"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>